syntax = "proto3";

service Metrics {
  // Sends a greeting
  rpc SendMetric (MetricRequest) returns (MetricResponse) {}
}

message MetricRequest {
  int64 id = 1;
  string name = 2;
  int64 timestamp = 3;
  repeated Metric metric = 4; 
}

message Metric {
  int64 id = 1;
  string name = 2;
  string type = 3;
  double value = 4;
}

message MetricResponse {
  string message = 1;
}
